--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 /* колір фону оверлей rgba(33, 150, 243, 0.9); */
 /* колір рамки інпутів rgba(33, 33, 33, 0.2); */
 /* колір плейсхолдера rgba(117, 117, 117, 0.5); */
+/* колір рамки інпута футера rgba(255, 255, 255, 0.3);*/
 
 html {
     box-sizing: border-box;
@@ -40,6 +41,7 @@ html {
     --bg-overlay: rgba(33, 150, 243, 0.9);
     --border-input-color: rgba(33, 33, 33, 0.2);
     --placeholder-color: rgba(117, 117, 117, 0.5);
+    --border-input-footer: rgba(255, 255, 255, 0.3);
 }
 
 body  {
@@ -578,7 +580,50 @@ height: 70px;
 background-color: var(--accent);
 }
 
-/* ФОРМА */
+
+/* ФОРМА ФУТЕРА */
+
+.join {
+    margin-left: auto;
+}
+
+.join-form {
+    margin-top: 20px;
+}
+
+.join-div {
+    display: flex;
+}
+
+.input-join {
+    padding: 15px 16px;
+    margin-right: 12px;
+    width: 358px;
+    height: 50px;
+
+    border: 1px solid var(--border-input-footer);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    outline: none;
+    background-color: transparent;
+
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: var(--secondary-white-color);
+
+}
+
+.input-join::placeholder {
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: var(--secondary-white-color);
+}
 
 .button-join {
     display: flex;
@@ -604,6 +649,9 @@ background-color: var(--accent);
     height: 24px;
     fill: var(--primary-white-color);
 }
+
+
+
 
 /* МОДАЛЬНЕ ВІКНО */
 .backdrop {
@@ -643,21 +691,35 @@ background-color: var(--accent);
 
 
 .close-modal {
+    display: flex;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+    
     position: absolute;
     top: 8px;
     right: 8px;
-
+   
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    border-color: var(--border-modal-color);
+    border: 1px solid var(--border-modal-color);
     background-color: var(--primary-white-color);
 
 }
 
-.close-modal::after {
-    content: '\2716';
-    color: var(--black-color);
+.close-icon {
+    margin: 0;
+    width: 11px;
+    height: 11px;
+    display: inline-block;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-modal:hover > .close-icon, 
+.close-modal:focus > .close-icon {
+    fill: var(--accent);
 }
 
 
@@ -700,6 +762,8 @@ background-color: var(--accent);
     border: 1px solid var(--border-input-color);
     border-radius: 4px;
     outline: none;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .form-icon {
@@ -712,6 +776,8 @@ background-color: var(--accent);
     height: 18px;
 
     fill: var(--primary-text-color);
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .form-field:focus-within > .form-input {
@@ -735,6 +801,8 @@ background-color: var(--accent);
 
     line-height: 1.14;
     letter-spacing: 0.01em;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .form-comment::placeholder {
@@ -773,6 +841,8 @@ background-color: var(--accent);
     height: 15px;
     border-radius: 2px;
     border: 2px solid var(--primary-text-color);
+
+    
 }
 
 .checkbox:checked + .checkbox-icon {
@@ -786,8 +856,7 @@ background-color: var(--accent);
 
 }
 
-.checkbox:focus + .checkbox-icon,
-.checkbox:active + .checkbox-icon {
+.checkbox:focus + .checkbox-icon{
     border-color: var(--accent);
 }
 
@@ -951,4 +1020,5 @@ background-color: var(--accent);
 .thumb-link:hover .overlay {
     transform: translateY(0);
 }
+
 
